2004-06-22  Richard Hult  <richard@imendio.com>

	* src/planner-task-dialog.c (task_dialog_update_sensitivity):
	Don't make work insensitive for fixed duration.

2004-06-21  Richard Hult  <richard@imendio.com>

	* data/stylesheets/Makefile.am:
	* data/stylesheets/planner2plannerv011.xsl:
	* data/ui/Makefile.am:
	* data/ui/html-plugin.ui:
	* data/ui/main-window.ui:
	* data/ui/xml-planner-plugin.ui:
	* libplanner/mrp-xsl.c: (xml_planner_pre012_write), (init):
	* src/planner-html-plugin.c:
	* src/planner-xml-planner-plugin.c: (get_last_dir),
	(xml_planner_plugin_export), (plugin_init), (plugin_exit): Based
	on patch from Lincoln, fixes bug #141257: export as older planner
	version.

	* src/planner-window.c: Remove stray precondition tests.

2004-06-21 Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-calendar.[ch] (mrp_calendar_add): new function
	needed for the undo system.
	* src/planner-calendar-dialog.c: undo support for add and remove
	calendars.
	* src/planner-working-time-dialog.c: undo support for changing the
	working time in calendars.

2004-06-21  Richard Hult  <richard@imendio.com>

	* src/planner-property-dialog.c:
	* src/planner-property-dialog.h:
	* src/planner-property-model.h: Fix indentation and remove the
	possibility to select which columns to use (unsed and didn't
	work). Also apply patch from Lincoln to fix bug #141967.

	* src/planner-task-tree.c: Remove debug output.

2004-06-21 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-sql-plugin.c: change in
	planner_application_get_gconf_client that breaks CVS compile,
	detected by lincoln. Change to use the new API.

2004-06-19  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-resource.c (resource_set_property,
	resource_set_property): Reschedule when the resource calendar is
	modified and the resource has assignments. Also reschedule when
	the calendar is changed. Fixes bug #138159.

	* libplanner/mrp-project.c (mrp_project_reschedule): Force recalc,